tests/fsharp/conformance/inference/E_TwoDifferentTypeVariables01.bsl

E_TwoDifferentTypeVariables01.fsx(61,33,61,43): typecheck error FS0041: A unique overload for method 'M' could not be determined based on type information prior to this program point. A type annotation may be needed.

Known types of arguments: 'a * 'b

Candidates:
 - static member C13.M: x: 'a * y: 'a -> One
 - static member C13.M: x: 'a * y: int -> Three

E_TwoDifferentTypeVariables01.fsx(62,33,62,43): typecheck error FS0041: A unique overload for method 'M' could not be determined based on type information prior to this program point. A type annotation may be needed.

Known types of arguments: 'a * 'b

Candidates:
 - static member C24.M: x: 'a * y: 'b -> Two
 - static member C24.M: x: 'a * y: C -> Four

E_TwoDifferentTypeVariables01.fsx(63,33,63,47): typecheck error FS0041: A unique overload for method 'M' could not be determined based on type information prior to this program point. A type annotation may be needed.

Known types of arguments: 'a * 'b

Candidates:
 - static member C13.M: x: 'a * y: 'a -> One
 - static member C13.M: x: 'a * y: int -> Three

E_TwoDifferentTypeVariables01.fsx(64,33,64,46): typecheck error FS0041: A unique overload for method 'M' could not be determined based on type information prior to this program point. A type annotation may be needed.

Known types of arguments: 'a * 'b

Candidates:
 - static member C13.M: x: 'a * y: 'a -> One
 - static member C13.M: x: 'a * y: int -> Three
